[package]
name = "tidy_bot_unofficial"
version = "0.1.0"
authors = ["bjorn3 <bjorn3@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.2.0"
hyper = "0.12.33"
futures = "0.1"
serde = "1.0.97"
serde_json = "1.0.40"
reqwest = "0.9.19"
#jwt = "0.4.0"
#crypto = "0.0.2"
frank_jwt = "3.1.1"
lazy_static = "1.3.0"
hmac = "0.7.1"
sha-1 = "0.8.1"
